<resources>
    <string name="app_name">MyVehicles</string>
    <string name="no_cars">No cars were found.</string>
    <string name="no_motorcycles">No motorcycles were found.</string>
    <string name="no_vehicles">No vehicles were found.</string>
    <string name="add_car">Add Car</string>
    <string name="add_car_pt">Adicionar Carro</string>
    <string name="add_motorcycle">Add Motorcycle</string>
    <string name="add_motorcycle_pt">Adicionar Motociclo</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="add_vehicle_pt">Adicionar veículo</string>
    <string name="title_activity_add_car">AddCar</string>
    <string name="brand">Brand (obligatory):</string>
    <string name="brand_pt">Marca (obrigatório):</string>
    <string name="brand1">Brand:</string>
    <string name="brand1_pt">Marca:</string>
    <string name="model">Model (obligatory):</string>
    <string name="model_pt">Modelo (obrigatório):</string>
    <string name="model1">Model:</string>
    <string name="model1_pt">Modelo:</string>
    <string name="displacement">Displacement:</string>
    <string name="displacement_pt">Cilindrada:</string>
    <string name="year">Year:</string>
    <string name="year_pt">Ano:</string>
    <string name="registration">Registration (obligatory):</string>
    <string name="registration_pt">Matrícula (obrigatório):</string>
    <string name="registration1">Registration</string>
    <string name="registration1_pt">Matrícula:</string>
    <string name="insurances">Insurances</string>
    <string name="insurances_pt">Seguros</string>
    <string name="inspections">Inspections</string>
    <string name="inspections_pt">Inspeções</string>
    <string name="taxes">Taxes</string>
    <string name="taxes_pt">Impostos</string>
    <string name="revisions">Revisions</string>
    <string name="revisions_pt">Revisões</string>
    <string name="value">Value:</string>
    <string name="value_pt">Valor:</string>
    <string name="title_activity_vehicle_details">VehicleDetails</string>
    <string name="title_activity_insurances_inspections_taxes_revisions">
        InsurancesInspectionsTaxesRevisions
    </string>
    <string name="title_activity_add_insurance_inspection_tax">AddInsuranceInspectionTax</string>
</resources>
